fix(tooltip): tooltip will be cut off at the limits of the innermost element with hidden overflow (#689)
* chore(draft): draft update to tooltip component

* fix(overlay): move the popper element outside of the overflow container

* docs(sandbox): update sandbox example

* docs(component): provide little explanation to overlay solution

* test(*):  update test to tooltip

* fix(tooltip): return back disabled property

--- a/web-components/src/components/tooltip/scss/tooltip.scss
+++ b/web-components/src/components/tooltip/scss/tooltip.scss
@@ -6,7 +6,7 @@
     position: relative;
 
     &.md-tooltip--disabled {
-      .md-tooltip__container {
+      .md-tooltip__popper {
         display: none;
       }
     }
@@ -15,7 +15,7 @@
       display: inline-block;
     }
 
-    &__container {
+    &__popper {
       animation-duration: 0.15s;
       animation-name: tooltip-fade;
       background-color: var(--tooltip-bg-color, $lm-tooltip-bg-color-light);
